# net-adapters

./: Cargo.toml  README.md
src/: adapter.rs  lib.rs
