[package]
name = "net-adapters"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version= "^0.3.9", features = ["iphlpapi", "impl-default", "winerror"]}
anyhow = "^1.0.75"
serde_derive = "^1.0.171"
serde = "^1.0.193"
widestring = "*"
